--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="board">
+        <div class="square" data-position="1"></div>
+        <div class="square" data-position="2"></div>
+        <div class="square" data-position="3"></div>
+        <div class="square" data-position="4"></div>
+        <div class="square" data-position="5"></div>
+        <div class="square" data-position="6"></div>
+        <div class="square" data-position="7"></div>
+        <div class="square" data-position="8"></div>
+        <div class="square" data-position="9"></div>
+    </div>
 </body>
 </html>
