Add start screen elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <main>
+        <div class="start">
+            <h1>Tic Tac Toe</h1>
+            <button type="button" class="start-button-1vs1">1 vs. 1</button>
+            <button type="button" class="start-button-1vski">1 vs. AI</button>
+            <button type="button" class="start-button-online">Online</button>
+        </div>
         <div class="board">
             <div class="square" data-position="1"></div>
             <div class="square" data-position="2"></div>
