Adjust start button class name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="start">
             <h1>Tic Tac Toe</h1>
             <button type="button" class="start-button start-button-1vs1">1 vs. 1</button>
-            <button type="button" class="start-button start-button-1vski">1 vs. AI</button>
+            <button type="button" class="start-button start-button-1vsai">1 vs. AI</button>
             <button type="button" class="start-button start-button-online">Online</button>
         </div>
         <div class="board">
