--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <button type="button" class="start-button start-button-1vsai">1 vs. AI</button>
             <button type="button" class="start-button start-button-online">Online</button>
         </div>
+        <div class="two-player-input">
+            <label for="player-one-name">Player One Name</label>
+            <input type="text" id="player-one-name">
+            <label for="player-two-name">Player Two Name</label>
+            <input type="text" id="player-two-name">
+            <button type="button" class="two-player-start">Start</button>
+        </div>
         <div class="board">
             <div class="square" data-position="1"></div>
             <div class="square" data-position="2"></div>
