Add win screen elements

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <div class="square" data-position="8"></div>
             <div class="square" data-position="9"></div>
         </div>
+        <div class="win">
+            <p>undefined won!</p>
+            <button type="button" class="win-button win-button-restart">Restart</button>
+            <button type="button" class="win-button win-button-quit">Quit</button>
+        </div>
     </main>
 </body>
 </html>
