Add ai-input elements

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <input type="text" id="player-two-name">
             <button type="button" class="two-player-start">Start</button>
         </div>
+        <div class="ai-input">
+            <label for="player-ai-name">Player One Name</label>
+            <input type="text" id="player-ai-name">
+            <button type="button" class="ai-start">Start</button>
+        </div>
         <div class="board">
             <div class="square" data-position="1"></div>
             <div class="square" data-position="2"></div>
