--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Tic Tac Toe</h1>
             <button type="button" class="start-button start-button-1vs1">1 vs. 1</button>
             <button type="button" class="start-button start-button-1vsai">1 vs. AI</button>
-            <button type="button" class="start-button start-button-online">Online</button>
+            <button type="button" class="start-button start-button-online" disabled>Online</button>
         </div>
         <div class="two-player-input">
             <label for="player-one-name">Player One Name</label>
