--- a/index.html
+++ b/index.html
@@ -17,10 +17,46 @@
             <button type="button" class="start-button start-button-online" disabled>Online</button>
         </div>
         <div class="two-player-input">
-            <label for="player-one-name">Player One Name</label>
-            <input type="text" id="player-one-name">
-            <label for="player-two-name">Player Two Name</label>
-            <input type="text" id="player-two-name">
+            <div class="input">
+                <div class="player-one-name">
+                    <label for="player-one-name">Player One Name</label>
+                    <input type="text" id="player-one-name">
+                </div>
+                <div class="player-one-marker">
+                    <label for="player-one-marker">Marker:</label>
+                    <select id="player-one-marker">
+                        <option value="cross">&#x274C;</option>
+                        <option value="face-hot">&#x1F975;</option>
+                        <option value="poop">&#x1F4A9;</option>
+                        <option value="star">&#x2B50;</option>
+                        <option value="drip">&#x1F4A7;</option>
+                        <option value="cat-smile">&#x1F63C;</option>
+                        <option value="monkey-eyes">&#x1F648;</option>
+                        <option value="heart-black">&#x1F5A4;</option>
+                        <option value="sun">&#x1F31D;</option>
+                    </select>
+                </div>
+            </div>
+            <div class="input">
+                <div class="player-two-name">
+                    <label for="player-two-name">Player Two Name</label>
+                    <input type="text" id="player-two-name">
+                </div>
+                <div class="player-two-marker">
+                    <label for="player-two-marker">Marker:</label>
+                    <select id="player-two-marker">
+                        <option value="circle">&#x2B55;</option>
+                        <option value="face-cold">&#x1F976;</option>
+                        <option value="skull">&#x1F480;</option>
+                        <option value="lightning">&#x26A1;</option>
+                        <option value="fire">&#x1F525;</option>
+                        <option value="cat-mad">&#x1F63E;</option>
+                        <option value="monkey-ears">&#x1F649;</option>
+                        <option value="heart-white">&#x1F90D;</option>
+                        <option value="moon">&#x1F31A;</option>
+                    </select>
+                </div>
+            </div>
             <button type="button" class="two-player-start">Start</button>
         </div>
         <div class="ai-input">
