Remove colon from Marker: label

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="text" id="player-one-name">
                 </div>
                 <div class="player-one-marker">
-                    <label for="player-one-marker">Marker:</label>
+                    <label for="player-one-marker">Marker</label>
                     <select id="player-one-marker">
                         <option value="cross">&#x274C;</option>
                         <option value="face-hot">&#x1F975;</option>
@@ -43,7 +43,7 @@
                     <input type="text" id="player-two-name">
                 </div>
                 <div class="player-two-marker">
-                    <label for="player-two-marker">Marker:</label>
+                    <label for="player-two-marker">Marker</label>
                     <select id="player-two-marker">
                         <option value="circle">&#x2B55;</option>
                         <option value="face-cold">&#x1F976;</option>
