Adjust marker option values for better handling in JS

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <div class="player-one-marker">
                     <label for="player-one-marker">Marker</label>
                     <select id="player-one-marker">
-                        <option value="cross">&#x274C;</option>
-                        <option value="face-hot">&#x1F975;</option>
-                        <option value="poop">&#x1F4A9;</option>
-                        <option value="star">&#x2B50;</option>
-                        <option value="drip">&#x1F4A7;</option>
-                        <option value="cat-smile">&#x1F63C;</option>
-                        <option value="monkey-eyes">&#x1F648;</option>
-                        <option value="heart-black">&#x1F5A4;</option>
-                        <option value="sun">&#x1F31D;</option>
+                        <option value="x274C">&#x274C;</option>
+                        <option value="x1F975">&#x1F975;</option>
+                        <option value="x1F4A9">&#x1F4A9;</option>
+                        <option value="x2B50">&#x2B50;</option>
+                        <option value="x1F4A7">&#x1F4A7;</option>
+                        <option value="x1F63C">&#x1F63C;</option>
+                        <option value="x1F648">&#x1F648;</option>
+                        <option value="x1F5A4">&#x1F5A4;</option>
+                        <option value="x1F31D">&#x1F31D;</option>
                     </select>
                 </div>
             </div>
@@ -45,15 +45,15 @@
                 <div class="player-two-marker">
                     <label for="player-two-marker">Marker</label>
                     <select id="player-two-marker">
-                        <option value="circle">&#x2B55;</option>
-                        <option value="face-cold">&#x1F976;</option>
-                        <option value="skull">&#x1F480;</option>
-                        <option value="lightning">&#x26A1;</option>
-                        <option value="fire">&#x1F525;</option>
-                        <option value="cat-mad">&#x1F63E;</option>
-                        <option value="monkey-ears">&#x1F649;</option>
-                        <option value="heart-white">&#x1F90D;</option>
-                        <option value="moon">&#x1F31A;</option>
+                        <option value="x2B55">&#x2B55;</option>
+                        <option value="x1F976">&#x1F976;</option>
+                        <option value="x1F480">&#x1F480;</option>
+                        <option value="x26A1">&#x26A1;</option>
+                        <option value="x1F525">&#x1F525;</option>
+                        <option value="x1F63E">&#x1F63E;</option>
+                        <option value="x1F649">&#x1F649;</option>
+                        <option value="x1F90D">&#x1F90D;</option>
+                        <option value="x1F31A">&#x1F31A;</option>
                     </select>
                 </div>
             </div>
