Add marker selection for ai game

--- a/index.html
+++ b/index.html
@@ -60,8 +60,26 @@
             <button type="button" class="two-player-start">Start</button>
         </div>
         <div class="ai-input">
-            <label for="player-ai-name">Player One Name</label>
-            <input type="text" id="player-ai-name">
+            <div class="input">
+                <div class="player-ai-name">
+                    <label for="player-ai-name">Player One Name</label>
+                    <input type="text" id="player-ai-name">
+                </div>
+                <div class="player-ai-marker">
+                    <label for="player-ai-marker">Marker</label>
+                    <select id="player-ai-marker">
+                        <option value="x274C">&#x274C;</option>
+                        <option value="x1F975">&#x1F975;</option>
+                        <option value="x1F4A9">&#x1F4A9;</option>
+                        <option value="x2B50">&#x2B50;</option>
+                        <option value="x1F4A7">&#x1F4A7;</option>
+                        <option value="x1F63C">&#x1F63C;</option>
+                        <option value="x1F648">&#x1F648;</option>
+                        <option value="x1F5A4">&#x1F5A4;</option>
+                        <option value="x1F31D">&#x1F31D;</option>
+                    </select>
+                </div>
+            </div>
             <button type="button" class="ai-start">Start</button>
         </div>
         <div class="board">
